--- a/demo/src/main/resources/templates/home.html
+++ b/demo/src/main/resources/templates/home.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,7 +7,28 @@
 </head>
 <body>
 <h1>Welcome to the Home Page!</h1>
+<div th:if="${username != null}">
+  <p>Здравствуйте, <span th:text="${username}"></span>!</p>
+</div>
 <a href="/login">Login</a>
 <a href="/register">Register</a>
+<h2>Создать команду</h2>
+<a href="/comands/create">Создать новую команду</a>
+
+<h2>Ваши команды</h2>
+<ul>
+  <th:block th:each="comand : ${userComands}">
+    <li>
+      <a th:href="@{/comands/{id}(id=${comand.id})}" th:text="${comand.title}">Команда</a>
+    </li>
+  </th:block>
+</ul>
+
+<h2>Ваши задачи</h2>
+<ul>
+  <th:block th:each="task : ${userTasks}">
+    <li th:text="${task.title}">Задача</li>
+  </th:block>
+</ul>
 </body>
 </html>
