--- a/demo/src/main/resources/templates/error.html
+++ b/demo/src/main/resources/templates/error.html
@@ -5,7 +5,8 @@
 </head>
 <body>
 <h1>Произошла ошибка</h1>
-<p>К сожалению, произошла ошибка. Пожалуйста, попробуйте позже.</p>
+<h1>Ошибка</h1>
+<p th:text="${error}">Ошибка</p>
 <a href="/">Вернуться на главную страницу</a>
 </body>
 </html>
