--- a/demo/src/main/resources/templates/home.html
+++ b/demo/src/main/resources/templates/home.html
@@ -23,7 +23,8 @@
     </li>
   </th:block>
 </ul>
-<a href="/notifications">Уведомления</a>
+<a href="/notifications">Уведомления</a> <a href="/chat">Перейти в чат</a>
+
 
 <h2>Задачи как работодатель</h2>
 <table>
