--- a/demo/src/main/resources/templates/home.html
+++ b/demo/src/main/resources/templates/home.html
@@ -9,9 +9,12 @@
 <h1>Welcome to the Home Page!</h1>
 <div th:if="${username != null}">
   <p>Здравствуйте, <span th:text="${username}"></span>!</p>
+  <a href="/login">Войти в другой аккаунт</a> <!-- Кнопка для выхода из аккаунта -->
 </div>
-<a href="/login">Login</a>
-<a href="/register">Register</a>
+<div th:if="${username == null}">
+  <a href="/login">Вход</a>
+  <a href="/register">Регистрация</a>
+</div>
 <h2>Создать команду</h2>
 <a href="/comands/create">Создать новую команду</a>
 
@@ -80,5 +83,6 @@
   </tr>
   </tbody>
 </table>
+<a href="/posts">Просмотреть все посты</a>
 </body>
 </html>
