--- a/demo/src/main/resources/templates/home.html
+++ b/demo/src/main/resources/templates/home.html
@@ -16,7 +16,8 @@
   <a href="/register">Регистрация</a>
 </div>
 <h2>Создать команду</h2>
-<a href="/comands/create">Создать новую команду</a>
+<a href="/comands/create">Создать новую команду</a><br>
+<a href="/chat">Чат</a>
 
 <h2>Ваши команды</h2>
 <ul>
