--- a/demo/src/main/resources/templates/error.html
+++ b/demo/src/main/resources/templates/error.html
@@ -5,8 +5,8 @@
 </head>
 <body>
 <h1>Произошла ошибка</h1>
-<h1>Ошибка</h1>
 <p th:text="${error}">Ошибка</p>
+<p>Пожалуйста, свяжитесь с поддержкой, если проблема не исчезнет.</p>
 <a href="/">Вернуться на главную страницу</a>
 </body>
 </html>
